<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.aelzohry.topsaleqatar.ui.auth.loginDialog.LoginDialogViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_rect_top"
            >



            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@null"
                android:src="@drawable/ic_close_black_24dp"
                app:tint="@color/colorAccent" />


            <LinearLayout
                android:is_visible="@{!vm.verifyContainer}"
                android:id="@+id/container_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_msg"
                    android:textColor="@color/text_color_black"
                    android:textSize="14sp" />
                <!-- Mobile       -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/new_ad_bg"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/country_code"
                        android:textColor="@color/text_color_black" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="start|center"
                        android:hint="@string/mobile"
                        android:imeOptions="actionGo"
                        android:inputType="phone"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@={vm.etPhone}"
                        android:textColor="@color/text_color_black"
                        android:textSize="14sp" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{(v)->vm.onLoginBtnClickedListener(v)}"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/mainColor"
                    android:textColor="@color/btn_txt_color"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <LinearLayout
                    android:id="@+id/termsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_info_white_24dp"
                        app:tint="@color/icon_terms_tint" />

                    <TextView
                        android:id="@+id/termsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_black"
                        tools:text="@string/terms" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:is_visible="@{vm.verifyContainer}"
                android:visibility="gone"
                android:id="@+id/container_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingEnd="32dp">


                <!-- Code -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/new_ad_bg"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_key_white_24dp"
                        app:tint="@color/text_color_black" />

                    <EditText
                        android:id="@+id/et_verification_code"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="start|center"
                        android:hint="@string/verification_code"
                        android:imeOptions="actionGo"
                        android:inputType="phone"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@={vm.etCode}"
                        android:textColor="@color/text_color_black"
                        android:textSize="14sp" />


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)->vm.onVerifyClickedListener(v)}"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/color_verification"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_check_white_24dp"
                    app:iconGravity="textStart" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{(v)->vm.onSendCodeAgainClickedListener(v)}"
                    android:text="@string/send_code_again"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_txt_color"
                    app:backgroundTint="@color/btn_main_bg"
                    app:cornerRadius="8dp" />

            </LinearLayout>



        </FrameLayout>
    </ScrollView>

</layout>