<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChangeLanguageDialogFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:src="@drawable/ic_close_black_24dp" />

            <TextView
                style="@style/TitleTextViewStyle"
                android:layout_centerInParent="true"
                android:text="@string/language" />
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_english"
                style="@style/NormalTextViewStyle"
                android:layout_width="match_parent"
                android:background="@drawable/custom_text_view_press"
                android:gravity="center"
                android:textAlignment="center"
                android:padding="@dimen/normalMargin"
                android:text="@string/english" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_color" />



            <TextView
                android:id="@+id/tv_arabic"
                android:background="@drawable/custom_text_view_press"
                style="@style/NormalTextViewStyle"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:padding="@dimen/normalMargin"
                android:text="@string/arabic" />

        </androidx.appcompat.widget.LinearLayoutCompat>





        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color" />



    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>