<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.new_ad.customPhotos.dialog.view.CustomPhotoDataDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/custom_photo"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@null"
                android:src="@drawable/ic_close_black_24dp"
                app:tint="@color/colorAccent" />
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_container"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_normal_template_6"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/detailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/new_ad_bg"
            android:gravity="center|top"
            android:hint="@string/details"
            android:inputType="text|textMultiLine"
            android:minHeight="40dp"
            android:minLines="5"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/ad_input_text_size" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/next"
            android:textAllCaps="false"
            app:backgroundTint="@color/mainColor"
            android:textColor="@color/btn_txt_color"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>