<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/header_bg"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:text="@string/custom_photos"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <ImageButton
                    android:id="@+id/ib_back"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_back" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/text_color_black"
                    android:textSize="16sp"
                    android:text="@string/please_select_one_of_custom_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_small_template_1" />




            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/next"
                android:textAllCaps="false"
                app:backgroundTint="@color/mainColor"
                android:textColor="@color/btn_txt_color"
                android:textSize="16sp"
                app:cornerRadius="8dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>